--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/core": "^7.13.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-spring/parallax": "^9.2.4",
+    "@react-spring/web": "^9.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,7 +20,9 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "react-token-auth": "^1.1.8",
+    "react-use-gesture": "^9.1.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
