--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cleex-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@babel/core": "^7.13.0",
     "@material-ui/core": "^4.12.3",
