--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cleex-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@babel/core": "^7.13.0",
     "@material-ui/core": "^4.12.3",
@@ -17,7 +16,9 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "emailjs-com": "^3.2.0",
+    "firebase": "^8.9.1",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.12.2",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-avatar-editor": "^10.3.6",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
